--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Specifies intentionally untracked files to ignore when using Git
 # http://git-scm.com/docs/gitignore
-
+.vscode/
 node_modules/
 platforms/
 plugins/
